--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
         <div class="compartment">Compartment 1</div>
         <div class="compartment">Compartment 2</div>
         <div class="compartment">Compartment 3</div>
+        <div class="compartment">Compartment 4</div>
       </div>
       <div class="grid-item">
         <div class="compartment">Compartment 1</div>
         <div class="compartment">Compartment 2</div>
         <div class="compartment">Compartment 3</div>
+        <div class="compartment">Compartment 4</div>
       </div>
       <div class="grid-item">
         <div class="compartment">Compartment 1</div>
         <div class="compartment">Compartment 2</div>
         <div class="compartment">Compartment 3</div>
+        <div class="compartment">Compartment 4</div>
       </div>
+      
     </main>
   </div>
   
